Memory leak related to ClassLoader::update_class_path_entry_list

XMLWordPrintable

    • b11

        Pretty sure this is related to the duplicate checking. It looks like if its a duplicate, it just drops the object on the floor and doesn't delete it.

        Direct leak of 40 byte(s) in 1 object(s) allocated from:
            #0 0x7f26620b89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
            #1 0x7f265e6988cf in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
            #2 0x7f265c21cc57 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
            #3 0x7f265c21cc57 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
            #4 0x7f265cae12fc in CHeapObjBase::operator new(unsigned long, MEMFLAGS) src/hotspot/share/memory/allocation.hpp:183
            #5 0x7f265cae12fc in CHeapObj<(MEMFLAGS)1>::operator new(unsigned long) src/hotspot/share/memory/allocation.hpp:237
            #6 0x7f265cae12fc in ClassLoader::create_class_path_entry(JavaThread*, char const*, stat const*, bool, bool) src/hotspot/share/classfile/classLoader.cpp:742
            #7 0x7f265cae1e35 in ClassLoader::create_class_path_entry(JavaThread*, char const*, stat const*, bool, bool) src/hotspot/share/classfile/classLoader.cpp:845
            #8 0x7f265cae1e35 in ClassLoader::update_class_path_entry_list(JavaThread*, char const*, bool, bool, bool) src/hotspot/share/classfile/classLoader.cpp:845
            #9 0x7f265cb0b09b in ClassLoaderExt::process_jar_manifest(JavaThread*, ClassPathEntry*) src/hotspot/share/classfile/classLoaderExt.cpp:235
            #10 0x7f265cad8a76 in ClassLoader::add_to_app_classpath_entries(JavaThread*, ClassPathEntry*, bool) src/hotspot/share/classfile/classLoader.cpp:830
            #11 0x7f265cae2386 in ClassLoader::update_class_path_entry_list(JavaThread*, char const*, bool, bool, bool) src/hotspot/share/classfile/classLoader.cpp:855
            #12 0x7f265cae2386 in ClassLoader::setup_app_search_path(JavaThread*, char const*) src/hotspot/share/classfile/classLoader.cpp:524
            #13 0x7f265cb08e36 in ClassLoaderExt::setup_app_search_path(JavaThread*) src/hotspot/share/classfile/classLoaderExt.cpp:79
            #14 0x7f265f0f64b4 in universe_init() src/hotspot/share/memory/universe.cpp:833
            #15 0x7f265d656c28 in init_globals() src/hotspot/share/runtime/init.cpp:123
            #16 0x7f265f083897 in Threads::create_vm(JavaVMInitArgs*, bool*) src/hotspot/share/runtime/threads.cpp:568
            #17 0x7f265da41163 in JNI_CreateJavaVM_inner src/hotspot/share/prims/jni.cpp:3588
            #18 0x7f265da41163 in JNI_CreateJavaVM src/hotspot/share/prims/jni.cpp:3674
            #19 0x7f2662831e25 in InitializeJVM src/java.base/share/native/libjli/java.c:1459
            #20 0x7f2662831e25 in JavaMain src/java.base/share/native/libjli/java.c:413
            #21 0x7f266283a708 in ThreadJavaMain src/java.base/unix/native/libjli/java_md.c:650
            #22 0x7f2661ea7fd3 in start_thread nptl/pthread_create.c:442

        Indirect leak of 81 byte(s) in 1 object(s) allocated from:
            #0 0x7f26620b89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
            #1 0x7f265e6988cf in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
            #2 0x7f265c21cc57 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
            #3 0x7f265c21cc57 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
            #4 0x7f265cae1381 in ClassPathEntry::copy_path(char const*) src/hotspot/share/classfile/classLoader.cpp:235
            #5 0x7f265cae1381 in ClassPathZipEntry::ClassPathZipEntry(void**, char const*, bool, bool) src/hotspot/share/classfile/classLoader.cpp:287
            #6 0x7f265cae1381 in ClassLoader::create_class_path_entry(JavaThread*, char const*, stat const*, bool, bool) src/hotspot/share/classfile/classLoader.cpp:742
            #7 0x7f265cae1e35 in ClassLoader::create_class_path_entry(JavaThread*, char const*, stat const*, bool, bool) src/hotspot/share/classfile/classLoader.cpp:845
            #8 0x7f265cae1e35 in ClassLoader::update_class_path_entry_list(JavaThread*, char const*, bool, bool, bool) src/hotspot/share/classfile/classLoader.cpp:845
            #9 0x7f265cb0b09b in ClassLoaderExt::process_jar_manifest(JavaThread*, ClassPathEntry*) src/hotspot/share/classfile/classLoaderExt.cpp:235
            #10 0x7f265cad8a76 in ClassLoader::add_to_app_classpath_entries(JavaThread*, ClassPathEntry*, bool) src/hotspot/share/classfile/classLoader.cpp:830
            #11 0x7f265cae2386 in ClassLoader::update_class_path_entry_list(JavaThread*, char const*, bool, bool, bool) src/hotspot/share/classfile/classLoader.cpp:855
            #12 0x7f265cae2386 in ClassLoader::setup_app_search_path(JavaThread*, char const*) src/hotspot/share/classfile/classLoader.cpp:524
            #13 0x7f265cb08e36 in ClassLoaderExt::setup_app_search_path(JavaThread*) src/hotspot/share/classfile/classLoaderExt.cpp:79
            #14 0x7f265f0f64b4 in universe_init() src/hotspot/share/memory/universe.cpp:833
            #15 0x7f265d656c28 in init_globals() src/hotspot/share/runtime/init.cpp:123
            #16 0x7f265f083897 in Threads::create_vm(JavaVMInitArgs*, bool*) src/hotspot/share/runtime/threads.cpp:568
            #17 0x7f265da41163 in JNI_CreateJavaVM_inner src/hotspot/share/prims/jni.cpp:3588
            #18 0x7f265da41163 in JNI_CreateJavaVM src/hotspot/share/prims/jni.cpp:3674
            #19 0x7f2662831e25 in InitializeJVM src/java.base/share/native/libjli/java.c:1459
            #20 0x7f2662831e25 in JavaMain src/java.base/share/native/libjli/java.c:413
            #21 0x7f266283a708 in ThreadJavaMain src/java.base/unix/native/libjli/java_md.c:650
            #22 0x7f2661ea7fd3 in start_thread nptl/pthread_create.c:442

              Assignee:
              Calvin Cheung (Inactive)
              Reporter:
              Justin King
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: