8304292: Memory leak related to ClassLoader::update_class_path_entry_list